# multi-tds

./: CMakeLists.txt  readme.md
include/: API.h  ECS.h  battle_state.h  binutils.h  component.h  component_factory.h  ecs.h  entity_manager.h  game.h  game_state.h  graphics_component.h  graphics_system.h  gravity_component.h  gravity_system.h  kinetic_component.h  object_manager.h  player_component.h  position_component.h  system.h  texture_manager.h  velocity_component.h  velocity_system.h
src/: battle_state.cpp  binutils.cpp  component.cpp  component_factory.cpp  entity_manager.cpp  game.cpp  graphics_component.cpp  graphics_system.cpp  gravity_component.cpp  gravity_system.cpp  main.cpp  player_component.cpp  position_component.cpp  texture_manager.cpp  velocity_component.cpp  velocity_system.cpp
